# webscrapperpro

./: MSFT-Report-2026-04-02T18-14-56.docx  MSFT-Report-2026-04-02T18-14-56.md  README.md  SETUP.md  TSLA-Report-2026-04-02T18-14-54.docx  TSLA-Report-2026-04-02T18-14-54.md  package-lock.json  package.json
research-scraper/: README.md  ScrappyCrawl-books.toscrape.com-1775191096464.json  pyproject.toml
research-scraper/research_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
research-scraper/scraper/: cli.py
research-scraper/scraper/agent/: engine.py  planner.py  synthesizer.py
research-scraper/scraper/models/: groq.py  mistral.py  model_router.py  ollama.py
research-scraper/scraper/schemas/: auto_schema.py  registry.py
research-scraper/scraper/tools/: extract.py  page.py  pagination.py
research-scraper/scraper/utils/: clean_text.py  logger.py  validate.py
scrappy/: .gitignore  MSFT-Report-2026-04-02T18-07-41.docx  MSFT-Report-2026-04-02T18-07-41.md  NVDA-Data-2026-06-05T06-21-44.xlsx  README.md  TSLA-Report-2026-04-02T17-42-06.md  TSLA-Report-2026-04-02T17-59-34.docx  TSLA-Report-2026-04-02T17-59-34.md  TSLA-Report-2026-04-02T18-07-47.docx  TSLA-Report-2026-04-02T18-07-47.md  cosmic_ascii.txt  package-lock.json  package.json  scrappy.config.yaml  scrappy_ascii.txt  tsconfig.json
scrappy/CosmicScrappy_Output/: CosmicScrappy_Config.json  CosmicScrappy_Data.xlsx  CosmicScrappy_Overview.docx  metadata.txt
scrappy/src/agent/: agent.ts  llm.ts  model.ts  router.ts  tools.ts  workflow.ts
scrappy/src/cli/: ui.ts  (+11 more)
tmp/: test_search.js
(+16 files in other folders)
