[project]
name = "research-scraper"
version = "0.1.0"
description = "An industrial-grade AI-driven agentic web scraper CLI tool"
authors = [
    {name = "Developer", email = "developer@example.com"}
]
dependencies = [
    "typer>=0.9.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "ollama>=0.1.0",
    "groq>=0.4.0",
    "mistralai>=0.0.5"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[project.scripts]
scrape-ai = "scraper.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"